<resources>
        <string name="app_name">Go shopping</string>
        <string name="buy_list">Shopping List</string>
        <string name="catalogue">History</string>
        <string name="item_name">Name (required)</string>
        <string name="brand_label">Brand</string>
        <string name="use_price_type">Which price to use in shopping list?</string>
        <string name="unit_price_txt">Unit price</string>
        <string name="bundle_price_txt">Bundle price</string>
        <string name="bundle_quantity_txt">Bundle quantity</string>
        <string name="description_label">Description of item</string>
        <string name="quantity_label">Quantity to buy</string>
        <string name="cb_unit_price">Unit price</string>
        <string name="cb_bundle_price">Bundle price</string>
        <string name="new_buy_item_title">New item</string>
        <string name="update_buy_item_title">Update Purchase details</string>
        <string name="remove_item_from_shopping_list_ok">removed from shopping list : OK</string>
        <string name="empty_view_title_text">Empty </string>
        <string name="empty_view_subtitle_text">Click "Add item" or star in History</string>

        <string name="text_item_brand_max_length">26</string>
        <string name="text_item_name_max_length">26</string>
        <string name="text_max_line">1</string>
        <string name="text_item_buy_qty_max_length">2</string>
        <string name="text_price_max_length">7</string>
        <string name="text_bundle_qty_length">5</string>
        <string name="text_item_description_max_length">30</string>
        <string name="mandatory_name">Name is required</string>
        <string name="mandatory_quantity">Quantity must be at least 1</string>
        <string name="view_buy_item_details">Item</string>
        <string name="discard">Leave</string>
        <string name="keep_editing">Stay</string>
        <string name="unsaved_changes">You may have unsaved changes.</string>
        <string name="item_is_in_shopping_list">To delete item, remove item from shopping list</string>
        <string name="ok">OK</string>
        <string name="default_brand_name">Brand</string>
        <string name="description_country_origin">Country of origin</string>
        <string name="prices_header">Pricing</string>
        <string name="country_origin_max_length">26</string>
        <string name="item_details_header">Item details</string>
        <string name="purchase_details_header">Purchase details</string>
        <string name="home_country_preference">Two-letter country code</string>
        <string name="example_home_country_preference">Example: SG for Singapore</string>
        <string name="dialog_title_home_country_preference">Country code</string>
        <string name="country_based_preferences">Country</string>
        <string name="user_settings">Settings</string>
        <string name="user_country_pref" translatable="false">home_country_preference</string>
        <string name="invalid_country_code">Invalid country code. Google 2-letter country code for information</string>
        <string name="menu_item_camera">Snap photo</string>
        <string name="message_title">Mandatory field(s)</string>
        <string name="database_success">Save : OK</string>
        <string name="database_failed">Save : Error</string>
        <string name="filesystem_delete_discarded_ok">Delete discarded photo(s) : OK</string>
        <string name="filesystem_delete_discarded_failed">Delete discarded photo(s) : Failed</string>
        <string name="added_to_shopping_list_ok">added to shopping list : OK</string>
        <string name="added_to_shopping_list_error">Add to shopping list : Error</string>
        <string name="remove_item_from_shopping_list_error">remove from shopping list : Error</string>
        <string name="settings_screen">Settings</string>
        <string name="settings_catalogue">Shopping list</string>
        <string name="user_sort_pref">user_sort_pref</string>
        <string name="menu_remove_item_from_shopping_list">Remove item from shopping list</string>
        <string name="summary_qty_purchase">Qty :</string>
        <string name="drawer_open">Opennn</string>
        <string name="drawer_close">Clozeee</string>
        <string name="sort_desc">Sort shopping list by</string>
        <string name="clear_checked_item">Clear checked item</string>
        <string name="currency_code_txt">3-letter currency code</string>
        <string name="max_currency_len">3</string>
        <string name="max_country_code_len">2</string>
        <string name="key_user_sort_pref" translatable="false">user_sort_pref</string>
        <string name="invalid_currency_code_msg">Invalid currency code</string>
        <string name="valid_country_code_msg">Enter a valid 3-letter currency code</string>
        <string name="exchange_rate_title">Exchange rates - European Central Bank</string>
        <string name="key_forex_web_api_1" translatable="false">key_forex_web_api_1</string>
        <string name="web_api_cat_pref">Web API and Cloud</string>
        <string name="exchange_rate_dialog_pref">Changing the url may render the app or parts of it unworkable</string>
        <string name="country_code_dialog_pref">Country code determines the app\'s home currency</string>
        <string name="invalid_price">Invalid price</string>
        <string name="dialog_invalid_title">Invalid</string>
        <string name="shopping_list_totals">Total</string>
        <string name="added_to_shoppinglist">Added:\u0020 </string>
        <string name="checked_to_shoppinglist">Checked:\u0020</string>
        <string name="dismiss">Dismiss</string>
        <string name="internet_not_available_exchange_rate">Translation of prices is unavailable because internet is unavailable.</string>
        <string name="hint_email">Email</string>
        <string name="hint_password">Password</string>
        <string name="sign_in">Sign in</string>
        <string name="sign_up">Sign up</string>
        <string name="share_shopping_list_txt">Share shopping list</string>
        <string name="add_to_shopping_list_txt">Add to shopping list</string>
        <string name="send_shopping_list">Send shopping list</string>
        <string name="item_shared_by">Shared by</string>
        <string name="cloud_shopping_account">Cloud</string>
        <string name="cloud_account_email_title">Shopping List Account</string>
        <string name="cloud_account_email_msg">Email used to authenticate </string>
        <string name="cloud_pref_email_title">Shopping List Account</string>
        <string name="key_cloud_email">key_cloud_email</string>
        <string name="authentication_msg">Access others shopping list</string>
        <string name="empty_shared_shopping_title_text">No items is shared with you.</string>
        <string name="progress_dialog_msg">Working ...</string>
        <string name="person_does_not_exist">does not exist</string>
        <string name="cancel">Cancel</string>
        <string name="create_account_msg">Create an account</string>
        <string name="hint_password_confirm">Confirm password</string>
        <string name="header_sign_in_msg">Sign in shopping list cloud</string>
        <string name="sign_out_msg">Do you want to sign out from shopping list cloud?</string>
        <string name="share_shopping_list_success">Sharing is successful.</string>
        <string name="history">History</string>
        <string name="shopping_list">Shopping list</string>
        <string name="remove_picture_item">Remove picture</string>
        <string name="insert_picture">Pick a picture</string>
        <string name="use_camera">Use a camera</string>
        <string name="invalid_multiple_buy_quantity_bundle">Must be multiple(s) of bundle quantity</string>
        <string name="invalid_bundle_quantity">Bundle quantity must be more than 1.</string>
        <string name="invalid_bundle_buy_quantity_one">Quantity must be more than 1.</string>
        <string name="invalid_bundle_quantity_one">Bundle quatity must be more than 1.</string>
        <string name="add_item_button_text">Add item ....</string>
        <string name="database_delete_success">deleted: OK</string>
        <string name="mandatory">Item name cannot be empty!</string>
        <string name="invalid_buy_quantity_zero">Must be 1 or more</string>
        <string name="empty_currency_code_msg">Cannot be empty.</string>
        <string name="decrease_qty">Reduce</string>
        <string name="increase_qty">Increase</string>
        <string name="history_item_editing_screen">History item</string>
</resources>
