<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2017, Mirza Irwan Bin Osman , All rights reserved. -->
<!-- Contact owner at mirza.irwan.osman@gmail.com -->


<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:title="@string/use_camera"
        android:id="@+id/menu_camera"
        android:icon="@drawable/ic_camera_enhance"
        app:showAsAction="always"
        />
    <item android:id="@+id/choose_picture"
          android:title="@string/insert_picture"
          android:icon="@drawable/ic_insert_photo"
          app:showAsAction="always" />

    <item android:id="@+id/remove_picture"
          android:title="@string/remove_picture_item"
          android:icon="@drawable/ic_cancel"
          app:showAsAction="always" />
</menu>