<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:id="@+id/item_details_header"
        style="@style/HeaderFont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/keyline_1"
        android:layout_marginRight="@dimen/keyline_1"
        android:text="@string/purchase_details_header"
        >
    </TextView>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/item_quantity_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/keyline_1"
        android:layout_marginRight="@dimen/keyline_1"
        android:paddingBottom="@dimen/edit_text_padding_bottom"
        android:paddingTop="@dimen/edit_text_padding_top"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_item_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:hint="@string/quantity_label"
            android:inputType="number"
            android:maxLength="@string/text_item_buy_qty_max_length"
            android:textAppearance="?android:textAppearanceMedium"
            android:minWidth="@dimen/edit_text_item_quantity_min_width"
            />

    </android.support.design.widget.TextInputLayout>

    <TextView

        android:id="@+id/price_type_query"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/use_price_type"
        android:paddingBottom="@dimen/text_view_padding_bottom"
        android:paddingTop="@dimen/text_view_padding_top"
        android:layout_marginLeft="@dimen/keyline_1"
        android:layout_marginRight="@dimen/keyline_1"
        />

    <RadioGroup
        android:id="@+id/price_type_choice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@id/is_unit_price"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/keyline_1"
        android:layout_marginRight="@dimen/keyline_1"
        android:paddingBottom="@dimen/radio_button_top_bottom_padding"
        android:paddingTop="@dimen/radio_button_top_bottom_padding"
        android:focusableInTouchMode="true"
        >

        <RadioButton
            android:id="@+id/rb_unit_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="?android:textAppearanceMedium"
            android:text="@string/cb_unit_price"/>

        <RadioButton
            android:id="@+id/rb_bundle_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cb_bundle_price"
            android:textAppearance="?android:textAppearanceMedium"/>

    </RadioGroup>

</LinearLayout>