<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/activity_item_editing"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#fff"
                android:elevation="4dp"
                android:focusableInTouchMode="true"
                tools:context="com.mirzairwan.shopping.ItemEditingActivity">

    <TextView
        android:id="@+id/item_details_header"
        style="@style/HeaderFont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/keyline_1"
        android:layout_marginRight="@dimen/keyline_1"
        android:text="@string/item_details_header"
        >
    </TextView>

    <ImageView
        android:id="@+id/img_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/item_details_header"
        android:maxHeight="200dp"
        android:scaleType="centerCrop"
        android:paddingBottom="@dimen/edit_text_padding_bottom"
        android:paddingTop="@dimen/edit_text_padding_top"
        />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/item_name_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_item"
        android:layout_marginLeft="@dimen/keyline_1"
        android:layout_marginRight="@dimen/keyline_1"
        android:paddingBottom="@dimen/edit_text_padding_bottom"
        android:paddingTop="@dimen/edit_text_padding_top"

        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:hint="@string/item_name"
            android:maxLength="@string/text_item_name_max_length"
            android:minWidth="@dimen/edit_text_item_name_min_width"
            android:textAppearance="?android:textAppearanceMedium"
            tools:text="Milk"
            >

        </android.support.design.widget.TextInputEditText>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/item_brand_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/item_name_layout"
        android:layout_marginLeft="@dimen/keyline_1"
        android:layout_marginRight="@dimen/keyline_1"
        android:paddingBottom="@dimen/edit_text_padding_bottom"
        android:paddingTop="@dimen/edit_text_padding_top"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_item_brand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:hint="@string/brand_label"
            android:maxLength="@string/text_item_brand_max_length"
            android:minWidth="@dimen/edit_text_item_brand_min_width"
            android:textAppearance="?android:textAppearanceMedium"
            tools:text="Magnolia"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/item_description_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/item_brand_layout"
        android:layout_marginLeft="@dimen/keyline_1"
        android:layout_marginRight="@dimen/keyline_1"
        android:paddingBottom="@dimen/edit_text_padding_bottom"
        android:paddingTop="@dimen/edit_text_padding_top"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_item_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:hint="@string/description_label"
            android:maxLength="@string/text_item_description_max_length"
            android:minWidth="@dimen/edit_text_item_description_min_width"
            android:textAppearance="?android:textAppearanceMedium"
            tools:text="500ml"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/item_country_origin_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/item_description_layout"
        android:layout_marginLeft="@dimen/keyline_1"
        android:layout_marginRight="@dimen/keyline_1"
        android:paddingBottom="@dimen/edit_text_padding_bottom"
        android:paddingTop="@dimen/edit_text_padding_top"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_item_country_origin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:hint="@string/description_country_origin"
            android:maxLength="@string/country_origin_max_length"
            android:minWidth="@dimen/edit_text_item_name_min_width"
            android:textAppearance="?android:textAppearanceMedium"
            tools:text="USA"
            />

    </android.support.design.widget.TextInputLayout>
</RelativeLayout>



