<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:id="@+id/activity_item_editing"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"
        tools:context="com.mirzairwan.shoppinglist.ItemEditingActivity">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/item_name_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/edit_text_padding_bottom"
            android:paddingTop="@dimen/edit_text_padding_top"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/keyline_1"
            android:layout_marginRight="@dimen/keyline_1"

            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/item_name"
                android:maxLength="@string/text_item_name_max_length"
                android:textAppearance="?android:textAppearanceMedium"
                android:minWidth="@dimen/edit_text_item_name_min_width"
                android:focusableInTouchMode="true"
                tools:text="Milk"
                >

            </android.support.design.widget.TextInputEditText>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/item_brand_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_name_layout"
            android:layout_marginLeft="@dimen/keyline_1"
            android:layout_marginRight="@dimen/keyline_1"
            android:paddingBottom="@dimen/edit_text_padding_bottom"
            android:paddingTop="@dimen/edit_text_padding_top"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_item_brand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/brand_label"
                android:maxLength="@string/text_item_brand_max_length"
                android:textAppearance="?android:textAppearanceMedium"
                android:minWidth="@dimen/edit_text_item_brand_min_width"
                android:focusableInTouchMode="true"
                tools:text="Magnolia"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/item_description_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_brand_layout"
            android:layout_marginLeft="@dimen/keyline_1"
            android:layout_marginRight="@dimen/keyline_1"
            android:paddingBottom="@dimen/edit_text_padding_bottom"
            android:paddingTop="@dimen/edit_text_padding_top"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_item_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description_label"
                android:textAppearance="?android:textAppearanceMedium"
                android:maxLength="@string/text_item_description_max_length"
                android:focusableInTouchMode="true"
                tools:text="500ml"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/item_country_origin_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_description_layout"
            android:layout_marginLeft="@dimen/keyline_1"
            android:layout_marginRight="@dimen/keyline_1"
            android:paddingBottom="@dimen/edit_text_padding_bottom"
            android:paddingTop="@dimen/edit_text_padding_top"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_item_country_origin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description_country_origin"
                android:textAppearance="?android:textAppearanceMedium"
                android:maxLength="@string/country_origin_max_length"
                android:minWidth="@dimen/edit_text_item_name_min_width"
                android:focusableInTouchMode="true"
                tools:text="USA"
                />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_prices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_country_origin_layout"
            android:layout_marginLeft="@dimen/keyline_1"
            android:layout_marginRight="@dimen/keyline_1"
            android:textOn="Hide Price"
            android:textOff="Show Price"
            android:text="Price"/>

        <FrameLayout
            android:id="@+id/price_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_country_origin_layout"
            android:layout_marginTop="@dimen/edit_text_padding_bottom"
            android:layout_marginBottom="@dimen/edit_text_padding_top"
            android:paddingBottom="@dimen/edit_text_padding_bottom"
            android:paddingTop="@dimen/edit_text_padding_top"
            android:visibility="invisible"
            >
        </FrameLayout>

    </RelativeLayout>
</ScrollView>